@@ -19,6 +19,7 @@ v1.5.1 (WIP)
 - Optimize TextView (writing is 90% faster, drawing is 50% faster)
 - Remove return values from methods which return their primitive (breaks chaining)
 - Remove Application.ForceDraw (Application.Draw may be called anywhere)
+- Rename SetBorderPadding and GetBorderPadding as SetPadding and GetPadding
 - Rename Pages as Panels
 - Support bracketed paste mode via tcell
 
